Complete section: [Refined my Image resolutions]

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <hr>
     <section class="hero">
         <figure>
-            <img src="download.jpg" alt="Tacos Delicioso" title="Tacos Delicioso! " width="1000" height="667">
+            <img src="tacos_delicioso_1000x667.png" alt="Tacos Delicioso" title="Tacos Delicioso! " width="1000" height="667">
             <figcaption class="offscreen">
                 Tacos and a Drink
             </figcaption>
