--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="hero">
         <h2 class="hero__h2">Bienvenidos!</h2>
         <figure>
-            <img src="download.jpg" alt="Tacos and a Drink" title="We love Tacos!" width="1000" height="667">
+            <img src="tacos_and_drink_1000x667.png" alt="Tacos and a Drink" title="We love Tacos!" width="1000" height="667">
             <figcaption class="offscreen">
                 Tacos and a Drink
             </figcaption>
