--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     
     <section class="hero">
         <figure>
-            <img src="tacos_close_up_400x260.png" alt="Little Taco Shop Tacos" title="Tacos ready to eat!" width="1000" height="260">
+            <img src="tacos_close_up_1000x649.png" alt="Little Taco Shop Tacos" title="Tacos ready to eat!" width="1000" height="649">
             <figcaption class="offscreen">
                 Little Taco Shop Tacos
             </figcaption>
@@ -59,16 +59,16 @@
                     <legend class="offscreen">Send Us a Message</legend>
                     <p class="contact__p">
                         <label class="contact__label" for="name">Name:</label>
-                        <input class="contact__input" type="text" name="name" id="name" placeholder="your name" required>
+                        <input class="contact__input" type="text" name="name" id="name" placeholder="Your Name" required>
                     </p>
                     <p class="contact__p">
                         <label class="contact__label" for="email">Email:</label>
-                        <input class="contact__input" type="email" name="email" id="email" placeholder="your email" required>
+                        <input class="contact__input" type="email" name="email" id="email" placeholder="Your Email" required>
                     </p>
                     <p class="contact__p">
                         <label class="contact__label" for="message">Your Message:</label>
                         <br>
-                        <textarea class="contact__textarea" name="message" id="message" cols="30" rows="10" placeholder="Type your message here"></textarea>
+                        <textarea class="contact__textarea" name="message" id="message" cols="30" rows="10" placeholder="Type your Message here"></textarea>
                     </p>
                 </fieldset>
                 <button class="contact__button" type="submit">Send</button>
